k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    selector:
        matchLabels:
            app: api
    replicas: 2
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
                - name: api
                  image: israelbuiatti/ms-backend:latest
                  command: ["npm"]
                  args: ["start"]
                  ports:
                      - containerPort: 80
                  imagePullPolicy: Always
                  #   resources:
                  #       limits:
                  #           memory: 512Mi
                  #           cpu: "1"
                  #       requests:
                  #           memory: 256Mi
                  #           cpu: "0.2"
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 3333
